--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>vue-heatmap</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="example"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
